--- a/devfile.yaml
+++ b/devfile.yaml
@@ -2,7 +2,7 @@ schemaVersion: 2.2.0
 attributes:
   controller.devfile.io/storage-type: per-workspace
 metadata:
-  name: dev-workspace-images
+  name: dev-spaces-latex-texlive
 components:
 - name: dev-tools
   container:
